stopped overflow scroll

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ body {
   height: calc(100vh - 64px);
   width: calc(100vw - 128px);
   margin: 0;
-  /* padding-bottom: 48px; */
   padding: 0 64px;
   padding-bottom: 64px;
+  overflow: hidden;
 }
 
 #canvas-wrapper {
